--- a/homepage/static/ngTemplates/app.customer.reviews.html
+++ b/homepage/static/ngTemplates/app.customer.reviews.html
@@ -12,9 +12,12 @@
               <div class="col-md-12">
                 <div class="card" style="margin-bottom:-2px; border-radius:4px 4px 0px 0px;">
                   <div class="card-body">
-                    <div class="row" style="padding:0px 10px; min-height:70px;">
+                    <div class="row" style="padding:0px 10px; min-height:100px;">
                       <div class="col-md-12">
                         <h5>UID : {{r[0].uid}}</h5>
+                      </div>
+                      <div class="col-md-12">
+                        <h5>Date : {{r[0].created | date : "dd-MMM-yyyy"}}</h5>
                       </div>
                       <div class="col-md-12">
                         <h5>{{r[0].email}}</h5>
