--- a/support/static/ngTemplates/app.reviews.html
+++ b/support/static/ngTemplates/app.reviews.html
@@ -1,8 +1,8 @@
 <div class="shaddowed card bg-white" style="min-height:93vh;position:relative;">
   <breadcrumb></breadcrumb>
 
-  <div class="row">
-    <div class="col-md-offset-1 col-md-3">
+  <div class="row container-fluid">
+    <div class="col-md-2">
       <div class="form-group">
         <label> Select Date </label>
         <div class="input-group">
@@ -21,14 +21,28 @@
     </div>
     <div class="col-md-3">
       <div class="form-group">
-        <label> User Email </label>
+        <label> Client Name </label>
+        <input type="text" class="form-control"  placeholder="Search and select" uib-typeahead="service as service.name for service in serviceSearch($viewValue)" ng-model="form.client">
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="form-group">
+        <label> Visitor Email </label>
         <input type="email" class="form-control"  placeholder="User E-mail..." ng-model="form.email">
       </div>
     </div>
     <div class="col-md-1" style="padding-top:20px">
-      <div class="btn btn-primary btn-block" ng-click="filterData()">
-        <strong>Filter</strong>
+      <div class="btn-group-vertical">
+        <button type="button" class="btn btn-primary" ng-click="filterData()">
+          <strong>Filter</strong>
+        </button>
+        <button type="button" class="btn btn-default" ng-click="download()" ng-if="reviewData.length>0">
+          Download <i class="fa fa-download"></i>
+        </button>
       </div>
+      <!-- <div class="btn btn-primary btn-block" ng-click="filterData()">
+        <strong>Filter</strong>
+      </div> -->
     </div>
   </div>
 
