--- a/support/static/ngTemplates/app.support.chatTransfer.modal.html
+++ b/support/static/ngTemplates/app.support.chatTransfer.modal.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="input-group">
-        <input type="text" class="form-control" placeholder="Select And Transfer..." ng-model="agentForm.name" disabled />
+        <input type="text" class="form-control" placeholder="Select User And Transfer..." ng-model="agentForm.name" disabled />
         <span class="input-group-btn">
           <button type="button" class="btn btn-default" ng-click="transferChat()">Transfer <i class="fa fa-share"></i></button>
         </span>
@@ -12,20 +12,17 @@
     <div class="row" style="padding:10px 20px">
       <div class="row">
         <div class="col-md-2 well text-center" ng-repeat="on in onlineAgents" style="background-color:#{{agentPk==on?'e3c95a':'74cf8c'}}; margin-bottom:15px;cursor:pointer; padding:10px;" ng-click="selectedAgent(on);">
-          {{on | getName}}
+          <img class="img img-circle" ng-src="{{on | getDP}}" style="width:20px;">
+          <span style="color:white">{{on | getName}}</span>
         </div>
       </div>
       <hr>
       <div class="row">
-        <div class="col-md-2 well text-center" ng-repeat="off in offlineAgents" style="background-color:#{{agentPk==off?'e3c95a':'c86161'}}; margin-bottom:15px;cursor:pointer; padding:10px;" ng-click="selectedAgent(off)">{{off | getName}}
+        <div class="col-md-2 well text-center" ng-repeat="off in offlineAgents" style="background-color:#{{agentPk==off?'e3c95a':'c86161'}}; margin-bottom:15px; padding:10px;">
+        <img class="img img-circle" ng-src="{{off | getDP}}" style="width:20px;">
+        <span style="color:white">{{off | getName}}</span>
         </div>
       </div>
     </div>
-  </div>
-
-  <div class="container-fluid text-center">
-    <button type="button" class="btn btn-success text-center" ng-click="submit()">
-      Submit
-    </button>
   </div>
 </div>
