--- a/support/static/ngTemplates/app.reviews.html
+++ b/support/static/ngTemplates/app.reviews.html
@@ -1,174 +1,114 @@
-<div class="shaddowed card bg-white" style="min-height:93vh;position:relative;">
+<div class="shaddowed card bg-white" style="min-height:93vh;">
+
   <breadcrumb></breadcrumb>
 
-  <div class="row container-fluid">
+  <div class="row container-fluid" style="padding:20px">
     <div class="col-md-2">
       <div class="form-group">
-        <label> Select Date </label>
+        <label><b> Select Date </b></label>
         <div class="input-group">
           <input type="text" class="form-control" show-weeks="false" uib-datepicker-popup="dd-MMMM-yyyy" ng-model="form.date" is-open="status.opened" />
           <span class="input-group-btn">
-            <button type="button" class="btn btn-default" ng-click="status.opened = true;"><i class="glyphicon glyphicon-calendar"></i></button>
+            <button type="button" class="btn btn-default" ng-click="status.opened = true;"><i class="fa fa-calendar"></i></button>
           </span>
         </div>
       </div>
     </div>
     <div class="col-md-3">
       <div class="form-group">
-        <label> Agent Name </label>
-        <input type="text" class="form-control"  placeholder="Search and select" uib-typeahead="user as user.username for user in userSearch($viewValue)" ng-model="form.user">
+        <label><b> Visitor Email </b></label>
+        <input type="email" class="form-control" placeholder="User E-mail..." ng-model="form.email">
       </div>
     </div>
-    <div class="col-md-3">
-      <div class="form-group">
-        <label> Client Name </label>
-        <input type="text" class="form-control"  placeholder="Search and select" uib-typeahead="service as service.name for service in serviceSearch($viewValue)" ng-model="form.client">
-      </div>
-    </div>
-    <div class="col-md-3">
-      <div class="form-group">
-        <label> Visitor Email </label>
-        <input type="email" class="form-control"  placeholder="User E-mail..." ng-model="form.email">
-      </div>
-    </div>
-    <div class="col-md-1" style="padding-top:20px">
+    <div class="col-md-1" style="padding-top:30px">
       <div class="btn-group-vertical">
         <button type="button" class="btn btn-primary" ng-click="filterData()">
           <strong>Filter</strong>
         </button>
-        <button type="button" class="btn btn-default" ng-click="download()" ng-if="reviewData.length>0">
+        <!-- <button type="button" class="btn btn-default" ng-click="download()" ng-if="reviewData.length>0">
           Download <i class="fa fa-download"></i>
-        </button>
+        </button> -->
       </div>
       <!-- <div class="btn btn-primary btn-block" ng-click="filterData()">
         <strong>Filter</strong>
       </div> -->
     </div>
   </div>
+  <uib-tabset>
+    <uib-tab active="searchTabActive">
+      <uib-tab-heading>
+        Browse
+        <i class="fa fa-list-ul"></i>
+      </uib-tab-heading>
+      <!-- <div class="card" style="min-height:65vh;" > -->
+        <div class="row" style="margin:15px;" >
+          <div class="col-md-4" ng-repeat="r in reviewData">
+            <div class="row" style="margin-bottom:30px; margin-right:15px;">
+                <div class="card" style="margin-bottom:-2px; border-radius:4px 4px 0px 0px; padding:15px;">
+                    <div class="row" style="padding:0px 10px; min-height:140px;">
+                      <!-- {{r[0]}} -->
+                      <div class="col-md-8">
+                        <h6>UID : {{r[0].uid}}</h6>
+                      </div>
+
+                      <div class="col-md-4">
+                        <div class="row">
+                          <span ng-if="r[0].rating == 5" class="pull-right">
+                              <i class="fa fa fa-smile-o fa-lg" style="color:#086b0a" aria-hidden="true"></i>
+                              <i class="fa fa-star fa-lg" style="color:#086b0a" aria-hidden="true"></i>
+                             </span>
+                          <span ng-if="r[0].rating == 4" class="pull-right">
+                               <i class="fa fa fa-smile-o fa-lg" style="color:#2fdd23" aria-hidden="true"></i>
+                              <i class="fa fa-star fa-lg" style="color:#2fdd23" aria-hidden="true"></i>
+                             </span>
+                          <span ng-if="r[0].rating == 3" class="pull-right">
+                               <i class="fa fa-meh-o fa-lg" style="color:#dff20c" aria-hidden="true"></i>
+                               <i class="fa fa-star fa-lg" style="color:#dff20c" aria-hidden="true"></i>
+                              </span>
+                          <span ng-if="r[0].rating == 2||data[0].rating == 1" class="pull-right">
+                               <i class="fa fa fa-frown-o fa-lg" style="color:#f70202" aria-hidden="true"></i>
+                               <i class="fa fa-star fa-lg" style="color:#f70202" aria-hidden="true"></i>
+                           </span>
+                        </div>
+                        <div class="row" style="padding-top:15px;" >
+                          <span class="pull-right" style="color:#286090 ;font-size:15px">{{r[0].numOfComments}} <i class="fa fa-comments-o fa-lg" aria-hidden="true"></i></span>
+
+                        </div>
+
+                      </div>
 
 
-  <div class="container-fluid" style="padding-top:30px">
-    <uib-tabset>
-      <uib-tab active="searchTabActive">
-        <uib-tab-heading>
-          Browse
-          <i class="fa fa-list-ul"></i>
-        </uib-tab-heading>
-        <div class="container-fluid">
-          <!-- <generic-Table data="data.tableData" config-Obj="{{config}}" callback-Fn="tableAction"></generic-Table> -->
-          <div class="row" style="padding-top:25px">
+                      <div class="col-md-12">
+                        <h6>Date : {{r[0].created | date : "dd-MMM-yyyy"}}</h6>
+                      </div>
+                      <div class="col-md-12">
+                        <h6 ng-if="r[0].email">Visitor's Email : {{r[0].email}}</h6>
+                      </div>
+                      <div class="col-md-12">
+                        <h6 ng-if="r[0].chatDuration!=0">Chat Duration : {{r[0].chatDuration}}</h6>
+                      </div>
+                    </div>
 
-            <div class="col-md-4" style="margin-bottom:20px; padding-left:10px;padding-right:10px;" ng-repeat="data in reviewData">
-              <!-- {{data[0].numOfComments}} {{data[0].statusChat}} -->
-              <div class="container-fluid card" style="padding-bottom:0px">
-                <div class="row container-fluid" style="border-bottom: 1px solid #dedede; height:170px; opacity:0.8;letter-spacing:0.6px">
-                  <div class="col-md-12">
-                    <h5 style="font-weight:501">Agent Name : {{data[0].user_id | getName}}
-                       <span ng-if="data[0].rating == 5" class="pull-right">
-                         <i class="fa fa fa-smile-o fa-lg" style="color:#086b0a" aria-hidden="true"></i>
-                         <i class="fa fa-star fa-lg" style="color:#086b0a" aria-hidden="true"></i>
-                        </span>
-                       <span ng-if="data[0].rating == 4" class="pull-right">
-                          <i class="fa fa fa-smile-o fa-lg" style="color:#2fdd23" aria-hidden="true"></i>
-                         <i class="fa fa-star fa-lg" style="color:#2fdd23" aria-hidden="true"></i>
-                        </span>
-                       <span ng-if="data[0].rating == 3" class="pull-right">
-                          <i class="fa fa-meh-o fa-lg" style="color:#dff20c" aria-hidden="true"></i>
-                          <i class="fa fa-star fa-lg" style="color:#dff20c" aria-hidden="true"></i>
-                         </span>
-                       <span ng-if="data[0].rating == 2||data[0].rating == 1" class="pull-right">
-                          <i class="fa fa fa-frown-o fa-lg" style="color:#f70202" aria-hidden="true"></i>
-                          <i class="fa fa-star fa-lg" style="color:#f70202" aria-hidden="true"></i>
-                      </span>
-
-                    </h5>
-                    <h5 style="font-weight:501">UID : {{data[0].uid}}
-                      <span class="pull-right" style="color:#286090 ;font-size:15px">{{data[0].numOfComments}} <i class="fa fa-comments-o fa-lg" aria-hidden="true"></i></span>
-                    </h5>
-                    <h5 style="font-weight:501">Client : {{data[0].company}}</h5>
-                    <h5 style="font-weight:501" ng-if="data[0].email" >Visitor's Email :  {{data[0].email}}</h5>
-                    <h5 style="font-weight:501" ng-if="data[0].chatDuration!=0">Chat Duration :  {{data[0].chatDuration}} Min</h5>
-                    <h5 style="font-weight:501" ng-if="data[0].statusChat" >Status :  {{data[0].statusChat}}</h5>
-                  </div>
                 </div>
-                <div class="row container-fluid" style="padding-top:10px;height:50px;background-color:#286090; opacity:1">
-                  <div class="col-md-12" style="color:#fff">
-                    <h5>Date: {{data[0].created | date : 'dd-MMM-yyyy'}}
-                      <span class="pull-right" style="cursor:pointer;"><i class="fa fa-info-circle fa-lg" ng-click="tableAction($index)"></i></span>
-                    </h5>
-                  </div>
+                <div class="btn btn-block btn-primary" style="border-top:1px solid #eee; padding:10px; border-radius:0px 0px 4px 4px;" ng-click="tableAction($index)">
+                  View Chat
                 </div>
-              </div>
             </div>
           </div>
         </div>
-      </uib-tab>
-      <uib-tab>
-        <uib-tab-heading>
-          Archived
-          <i class="fa fa-archive"></i>
-        </uib-tab-heading>
-        <div class="container-fluid">
-          <!-- <generic-Table data="data.tableData" config-Obj="{{config}}" callback-Fn="tableAction"></generic-Table> -->
-          <div class="row" style="padding-top:25px">
+      <!-- </div> -->
+    </uib-tab>
 
-            <div class="col-md-3" style="margin-bottom:10px; padding-left:10px;padding-right:10px;" ng-repeat="data in archivedData">
-              <!-- {{data[0]}} -->
-              <div class="container-fluid card" style="padding-bottom:0px">
-                <div class="row container-fluid" style="border-bottom: 1px solid #dedede; height:150px; opacity:0.8;letter-spacing:0.6px">
-                  <div class="col-md-12">
-                    <h5 style="font-weight:501">Agent Name : {{data[0].user_id | getName}}
-                       <span ng-if="data[0].rating == 5" class="pull-right">
-                         <i class="fa fa fa-smile-o fa-lg" style="color:#086b0a" aria-hidden="true"></i>
-                         <i class="fa fa-star fa-lg" style="color:#086b0a" aria-hidden="true"></i>
-                        </span>
-                       <span ng-if="data[0].rating == 4" class="pull-right">
-                          <i class="fa fa fa-smile-o fa-lg" style="color:#2fdd23" aria-hidden="true"></i>
-                         <i class="fa fa-star fa-lg" style="color:#2fdd23" aria-hidden="true"></i>
-                        </span>
-                       <span ng-if="data[0].rating == 3" class="pull-right">
-                          <i class="fa fa-meh-o fa-lg" style="color:#dff20c" aria-hidden="true"></i>
-                          <i class="fa fa-star fa-lg" style="color:#dff20c" aria-hidden="true"></i>
-                         </span>
-                       <span ng-if="data[0].rating == 2||data[0].rating == 1" class="pull-right">
-                          <i class="fa fa fa-frown-o fa-lg" style="color:#f70202" aria-hidden="true"></i>
-                          <i class="fa fa-star fa-lg" style="color:#f70202" aria-hidden="true"></i>
-                      </span>
-                    </h5>
-                    <h5 style="font-weight:501">UID : {{data[0].uid}}
-                      <span class="pull-right" style="color:#286090 ;font-size:15px">{{data[0].numOfComments}} <i class="fa fa-comments-o fa-lg" aria-hidden="true"></i></span>
-                    </h5>
-                    <h5 style="font-weight:501">Client : {{data[0].company}}</h5>
-                    <h5 style="font-weight:501" ng-if="data[0].email" >Visitor's Email :  {{data[0].email}}</h5>
-                      <h5 style="font-weight:501" ng-if="data[0].chatDuration!=0">Chat Duration :  {{data[0].chatDuration}} Min</h5>
-                    <!-- <i class="fa fa-star" style="color:#fbd73f" aria-hidden="true"></i> -->
-                  </div>
-                </div>
-                <div class="row container-fluid" style="padding-top:10px;height:50px;background-color:#286090; opacity:1">
-                  <div class="col-md-12" style="color:#fff">
-                    <h5>Date: {{data[0].created | date : 'dd-MMM-yyyy'}}
-                      <span class="pull-right" style="cursor:pointer;"><i class="fa fa-info-circle fa-lg" ng-click="tableArchAction($index)"></i></span>
-                    </h5>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </uib-tab>
-      <uib-tab ng-repeat="tab in tabs" active="tab.active" disable="tab.disabled">
-        <uib-tab-heading>
-          {{tab.title}}
-          <i ng-if="tab.cancel" class="fa fa-close" ng-click="closeTab($index);"></i>
-        </uib-tab-heading>
-        <div ng-if="tab.app == 'companyEdit'">
-          <div ng-include="'/static/ngTemplates/app.customers.form.html'"></div>
-        </div>
-        <div ng-if="tab.app == 'AgentInfo'">
-          <div ng-include="'/static/ngTemplates/app.reviews.explore.html'"></div>
-        </div>
-      </uib-tab>
+    <uib-tab ng-repeat="tab in tabs" active="tab.active" disable="tab.disabled">
+      <uib-tab-heading>
+        {{tab.title}}
+        <i ng-if="tab.cancel" class="fa fa-close" ng-click="closeTab($index);"></i>
+      </uib-tab-heading>
+      <div ng-if="tab.app == 'ChatInfo'">
+        <div ng-include="'/static/ngTemplates/app.reviews.explore.html'"></div>
+      </div>
+    </uib-tab>
+  </uib-tabset>
 
-    </uib-tabset>
-  </div>
+
 </div>
