--- a/support/static/ngTemplates/app.qualityCheck.html
+++ b/support/static/ngTemplates/app.qualityCheck.html
@@ -1,4 +1,4 @@
-<div class=" bg-white" style="min-height:93vh;position:relative;">
+<div class=" bg-white" style="min-height:93vh;position:relative;overflowX:hidden">
   <breadcrumb></breadcrumb>
 
   <div class="container-fluid">
@@ -69,7 +69,7 @@
         <div class="container-fluid">
           <!-- <generic-Table data="data.tableData" config-Obj="{{config}}" callback-Fn="tableAction"></generic-Table> -->
           <div class="row" style="padding-top:25px">
-            <div style="width: 100%;position: absolute;top:400px;left:35%;" ng-if="loadingData">
+            <div style="position: absolute;top:400px;left:35%;" ng-if="loadingData">
               <img src="https://media1.tenor.com/images/db85ba00c6073b451a8f05156a66524e/tenor.gif?itemid=9856796" alt="">
             </div>
 
@@ -142,7 +142,7 @@
                      <td>{{data[0].rating? data[0].rating:'-'}}</td>
                      <td ng-if="data[0].statusChat=='closed'" style="background-color:rgba(255, 0, 0,0.7)">{{data[0].statusChat}}</td>
                      <td ng-if="data[0].statusChat=='started'" style="background-color:green">{{data[0].statusChat}}</td>
-                     <td ng-if="data[0].statusChat!=='started'&&data[0].statusChat!=='closed'">{{data[0].statusChat}}</td>
+                     <td ng-if="data[0].statusChat!='started'&&data[0].statusChat!='closed'">{{data[0].statusChat? data[0].statusChat:'-'}}</td>
                      <!-- <td ng-if="data[0].statusChat=='started'" style="background-color:green">{{data[0].statusChat}}</td> -->
                      <!-- <td style="background-color:red">{{data[0].statusChat}}</td>
                      <td style="background-color:red">{{data[0].statusChat}}</td> -->
@@ -151,7 +151,7 @@
                 </table>
             </div>
 
-            <div class="" style="width: 100%;position: absolute;top:400px;left:40%;color:#f0f0f0;font-size:40px" ng-if="myDialouge">
+            <div class="" style="position: absolute;top:400px;left:40%;color:#f0f0f0;font-size:40px" ng-if="myDialouge">
               No More Data
             </div>
 
@@ -172,7 +172,7 @@
 
         <div class="container-fluid">
           <div class="row" style="padding-top:25px">
-            <div style="width: 100%;position: absolute;top:400px;left:35%;" ng-if="loadingDataForArc">
+            <div style="position: absolute;top:400px;left:35%;" ng-if="loadingDataForArc">
               <img src="https://media1.tenor.com/images/db85ba00c6073b451a8f05156a66524e/tenor.gif?itemid=9856796" alt="">
             </div>
             <div ng-if="!isTableView" class="col-md-4" style="margin-bottom:10px; padding-left:10px;padding-right:10px;" ng-repeat="data in archivedData " ng-click="tableArchAction($index)">
@@ -249,7 +249,7 @@
                  </tbody>
               </table>
             </div>
-            <div class="" style="width: 100%;position: absolute;top:400px;left:40%;color:#f0f0f0;font-size:40px" ng-if="myDialouge">
+            <div class="" style="position: absolute;top:400px;left:40%;color:#f0f0f0;font-size:40px" ng-if="myDialouge">
               No More Data
             </div>
 
