--- a/support/static/ngTemplates/app.reviews.html
+++ b/support/static/ngTemplates/app.reviews.html
@@ -20,7 +20,7 @@
         <input type="email" class="form-control" placeholder="User E-mail..." ng-model="form.email">
       </div>
     </div>
-    <div class="col-md-1" style="padding-top:30px">
+    <div class="col-md-1" style="padding-top:23px">
       <div class="btn-group-vertical">
         <button type="button" class="btn btn-primary" ng-click="filterData()">
           <strong>Filter</strong>
@@ -33,6 +33,12 @@
         <strong>Filter</strong>
       </div> -->
     </div>
+    <div class="col-md-1" style="padding-top:23px">
+      <button type="button" class="btn btn-default" ng-click="setMyView()" ng-if="reviewData.length>0">
+         <i ng-if="!isTableView"class="fa fa-table"  aria-hidden="true"></i>
+         <i ng-if="isTableView" class="fa fa-address-card-o" aria-hidden="true"></i>
+      </button>
+    </div>
   </div>
   <uib-tabset>
     <uib-tab active="searchTabActive">
@@ -42,7 +48,10 @@
       </uib-tab-heading>
       <!-- <div class="card" style="min-height:65vh;" > -->
         <div class="row" style="margin:15px;" >
-          <div class="col-md-4" ng-repeat="r in reviewData">
+          <div style="position: absolute;top:400px;left:35%;" ng-if="loadingData">
+            <img src="https://media1.tenor.com/images/db85ba00c6073b451a8f05156a66524e/tenor.gif?itemid=9856796" alt="">
+          </div>
+          <div ng-if="!isTableView" class="col-md-4" ng-repeat="r in reviewData">
             <div class="row" style="margin-bottom:30px; margin-right:15px;">
                 <div class="card" style="margin-bottom:-2px; border-radius:4px 4px 0px 0px; padding:15px;">
                     <div class="row" style="padding:0px 10px; min-height:130px;">
@@ -95,6 +104,41 @@
                 </div>
             </div>
           </div>
+
+          <div class="col-md-12" ng-if="isTableView&&reviewData.length>0">
+              <table style="width:100%;font-size:16px" id="myQATable" datatable="" dt-options="dtOptions" dt-column-defs="dtColumnDefs" class="row-border hover">
+                <thead>
+                  <tr id="myQATableHeader">
+                    <th style="text-align:center">Chat Start</th>
+                    <th style="text-align:center">Company</th>
+                    <th>Advisor</th>
+                    <th>UID/Visitor Name</th>
+                    <th>Rating</th>
+                    <th>Status</th>
+                  </tr>
+                </thead>
+               <tbody>
+                 <tr ng-repeat="data in reviewData" style="text-align:center" ng-click="tableAction(data,true)">
+                   <td>{{data[0].created | date : 'dd-MMM-yyyy'}}</td>
+                   <td>{{data[0].company? data[0].company:'-'}}</td>
+                   <td>{{data[0].user_id | getName}}</td>
+                   <td>{{data[0].uid}}</td>
+                   <td>{{data[0].rating? data[0].rating:'-'}}</td>
+                   <td ng-if="data[0].statusChat=='closed'" style="background-color:rgba(255, 0, 0,0.7)">{{data[0].statusChat}}</td>
+                   <td ng-if="data[0].statusChat=='started'" style="background-color:green">{{data[0].statusChat}}</td>
+                   <td ng-if="data[0].statusChat!='started'&&data[0].statusChat!='closed'">{{data[0].statusChat? data[0].statusChat:'-'}}</td>
+                   <!-- <td ng-if="data[0].statusChat=='started'" style="background-color:green">{{data[0].statusChat}}</td> -->
+                   <!-- <td style="background-color:red">{{data[0].statusChat}}</td>
+                   <td style="background-color:red">{{data[0].statusChat}}</td> -->
+                 </tr>
+               </tbody>
+              </table>
+          </div>
+
+          <div class="" style="position: absolute;top:400px;left:40%;color:#f0f0f0;font-size:40px" ng-if="myDialouge">
+            No More Data
+          </div>
+
         </div>
       <!-- </div> -->
     </uib-tab>
