--- a/POS/static/ngTemplates/app.deliveryCenter.online.html
+++ b/POS/static/ngTemplates/app.deliveryCenter.online.html
@@ -27,7 +27,7 @@
                 <i ng-if="tab.cancel" class="fa fa-close" ng-click="closeTab($index);"></i>
               </uib-tab-heading>
               <div ng-if="tab.app == 'orderInfo'">
-                <div ng-include="'/static/ngTemplates/app.ecommerce.vendor.orders.explore.html'"></div>
+                <div ng-include="'/static/ngTemplates/app.deliveryCenter.online.orders.explore.html'"></div>
               </div>
             </uib-tab>
           </uib-tabset>
