--- a/support/static/ngTemplates/app.projects.service.view.html
+++ b/support/static/ngTemplates/app.projects.service.view.html
@@ -1276,9 +1276,9 @@
         confirm-button-type="primary" cancel-button-type="default" ng-if="form.status=='approved'">Save</button>
     </div>
   </div>
-</div>
+<!-- </div>
 
-<div ng-controller="businessManagement.projects.invoice.view">
+<div ng-controller="businessManagement.projects.invoice.view"> -->
   <div class="container-fluid" style="padding:20px;" ng-if="form.status=='ongoing'">
     <div class="col-md-3" style="border-right:solid 2px #eeeeee;margin-bottom:3em;min-height:80vh">
       <div class="row">
@@ -1502,7 +1502,7 @@
             <th>Price</th>
             <th>Total</th>
           </tr>
-          <tr ng-repeat="v in purchase  track by $index">
+          <tr ng-repeat="v in projects  track by $index">
             <td>{{$index + 1}}</td>
             <td>{{v.products.part_no}}</td>
             <td>{{v.products.description_1}}<span ng-if="v.products.description_2"> ({{v.products.description_2}})</span></td>
